--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,12 @@
 
 <body>
 
-  <div id="root"></div>
+  <div id="root">
+
+  </div>
+  <div>
+
+  </div>
   <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
