--- a/public/index.html
+++ b/public/index.html
@@ -27,12 +27,9 @@
 
 <body>
 
-  <div id="root">
+  <div id="modal"></div>
+  <div id="root"></div>
 
-  </div>
-  <div>
-
-  </div>
   <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
